# BlueC

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md
include/bluec/: api.h  bluec.h  types.h
scripts/: get_includes.sh
src/: CMakeLists.txt  adapter.cpp  adapter.h  adapterlist.cpp  adapterlist.h  common.h  init.cpp  libctx.cpp  libctx.h  log.h
src/utils/: utils.h
tests/: CMakeLists.txt  main.cpp
